Fixed background image, NavBar alignment, Added Footer element

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,4 +17,9 @@
 html {
   box-sizing: border-box;
   font-family: 'Oswald', sans-serif;
+  background: url(https://res.cloudinary.com/es-axiom/image/upload/v1472661902/pexels-photo-25896_jfqe2o.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
